--- a/fullpage/index.html
+++ b/fullpage/index.html
@@ -26,6 +26,14 @@
 		#navTop>ul>li>a{display: block;line-height:50px;text-align:center;padding:0 10px;}
 		#navTop>ul>li.active{background: #f00;}
 		#navTop>ul>li.active>a{color:white;}
+		.main_cmt{width: 400px;margin-left:100px;}
+		.main_cmt p{text-shadow:1px 1px 1px #292929;color:#fff;font-weight:bold;}
+		.main_cmt p:nth-child(1){font-size:3em;}
+		.main_cmt p:nth-child(2){font-size:2em;}
+		.main_cmt a{display: block;text-align:center;width:150px;border: 1px solid #fff;background:none;color:white;border-radius:10px;margin-top:30px;line-height:45px;transition:0.3s;}
+		.main_cmt a:hover{background: #fff;color:#000;}
+		#page2 div.onview{opacity:0;transition:.3s;}
+		#page2 div.onview.mactive{opacity:1;transform:translateX(100px);}
 
 
 	</style>
@@ -33,7 +41,15 @@
 		$(document).ready(function(){
 			$("#fullpage").fullpage({
 				anchor:["1st","2st","3st","4st"],
-				menu:"#topMenu"
+				menu:"#topMenu",
+				'afterLoad':function(anchorsLink,index){
+					console.log(index);
+					if(index == 2){
+						$(".onview").addClass("mactive");
+					}else{
+						$(".onview").removeClass("mactive");
+					}
+				}
 			});
 		});
 	</script>
@@ -57,9 +73,11 @@
 		</div>
 		<div class="section pages" id="page2" data-anchor="2st">
 			<div class="main_cmt">
-				<p>Lorem ipsum.</p>
-				<p>Lorem ipsum dolor sit.</p>
-				<a href="#">more</a>
+				<div class="onview">
+					<p>Lorem ipsum.</p>
+					<p>Lorem ipsum dolor sit.</p>
+					<a href="#">more</a>
+				</div>
 			</div>
 		</div>
 		<div class="section pages" id="page3" data-anchor="3st">
@@ -70,10 +88,26 @@
 			</div>
 		</div>
 		<div class="section pages" id="page4" data-anchor="4st">
-			<div class="main_cmt">
-				<p>Lorem ipsum.</p>
-				<p>Lorem ipsum dolor sit.</p>
-				<a href="#">more</a>
+			<div class="slide">
+				<div class="main_cmt">
+					<p>Lorem ipsum.</p>
+					<p>Lorem ipsum dolor sit.</p>
+					<a href="#">more</a>
+				</div>
+			</div>
+			<div class="slide">
+				<div class="main_cmt">
+					<p>Lorem ipsum.</p>
+					<p>Lorem ipsum dolor sit.</p>
+					<a href="#">more</a>
+				</div>
+			</div>
+			<div class="slide">
+				<div class="main_cmt">
+					<p>Lorem ipsum.</p>
+					<p>Lorem ipsum dolor sit.</p>
+					<a href="#">more</a>
+				</div>
 			</div>
 		</div>
 	</div>
