--- a/20190114_jquery/index.html
+++ b/20190114_jquery/index.html
@@ -12,6 +12,8 @@
 		#top_menu ul{float: right;margin-right:33px;}
 		#top_menu ul li{float: left;}
 		#top_menu ul li a{display: block;color:#fff;padding:59px 0 0 63px;}
+		#top_menu ul li.on a{color:#000;font-weight: bold;}
+		#contents{margin-top:114px;}
 		#logo{float: left;}
 	</style>
 	<script src="../js/jquery-3.3.1.min.js"></script>
@@ -21,16 +23,44 @@
 			var contents = $("#contents > div");
 			menu.click(function(e){
 				e.preventDefault();
-
 				var tg = $(this);
 				var i = tg.index();
 
 				var section = contents.eq(i);
 				console.log(section);
+				
 				var tt = section.offset().top - 114;
 				$("html,body").stop().animate({scrollTop:tt});
 
 			});
+			$(window).scroll(function(){
+				var sct = window.pageYOffset;
+
+				contents.each(function(index){
+					if (sct >= $(this).offset().top - 114){
+						menu.removeClass("on");
+						menu.eq(index).addClass("on");
+					}
+				});
+
+				// var paper = contents.eq(0).offset().top - 114 ;
+				// if(sct >= paper){
+				// 	menu.removeClass("on");
+				// 	menu.eq(0).addClass("on");
+				// }
+
+				// var company = contents.eq(1).offset().top - 114 ;
+				// if(sct >= company){
+				// 	menu.removeClass("on");
+				// 	menu.eq(1).addClass("on");
+				// }
+
+
+
+
+
+			});
+
 		});
 	</script>
 </head>
@@ -41,7 +71,7 @@
 				<a href="#home">logo</a>
 			</div>
 			<ul>
-				<li><a href="#works">menu1</a></li>
+				<li class="on"><a href="#works">menu1</a></li>
 				<li><a href="#company">menu2</a></li>
 				<li><a href="#email">menu3</a></li>
 			</ul>
@@ -51,6 +81,7 @@
 			<div id="company"><img src="../images/work.jpg" alt="work"></div>
 			<div id="email"><img src="../images/email.jpg" alt="email"></div>
 		</div>
+		<div style="height: 300px;"></div>
 	</div>
 	
 </body>
