--- a/20190115_jquery/index_menu01.html
+++ b/20190115_jquery/index_menu01.html
@@ -5,21 +5,21 @@
 	<title>menu</title>
 	<link rel="stylesheet" href="../css/reset.css">
 	<style>
-		#menu{width: 900px;margin:0 auto;}
+		#menu{width: 900px;margin:0 auto;position: relative;}
 		#menu >ul{width: 100%;height:40px;}
 		#menu >ul:after{content:"";display: block;clear: both;}
-		#menu >ul>li{float: left;width:20%;border-right:1px solid #dfdfdf;box-sizing:border-box;_position: relative;}
+		#menu >ul>li{float: left;width:20%;border-right:1px solid #dfdfdf;box-sizing:border-box;}
 		#menu >ul>li>a{display: block;line-height:40px;text-align:center;}
 		#menu >ul>li:last-child{border-right:none;}
 		#menu >ul>li:hover{background: #eee;}
 		#menu >ul>li:hover ul.sub{background: #eee;}
 		/*#menu >ul>li:hover ul.sub{background: #eee;_opacity:1;display:block;}*/
 		
-		ul.sub{_opacity:0;_position: absolute;}
-		ul.sub{width:100%;background:#fff;}
-		ul.sub>li{width:100%;}
-		ul.sub>li:hover{background: #eee;}
-		ul.sub>li>a{display: block;text-align:center;padding:5px 0;}
+		ul.sub{_opacity:0;position:absolute;left:0;width:100%;box-sizing:border-box;}
+		ul.sub{background:#fff;}
+		ul.sub:after{content:"";display: block;clear: both;}
+		ul.sub>li{float: left;box-sizing:border-box;}
+		ul.sub>li>a{display: block;text-align:center;padding:5px 10px;}
 
 		.container{width:100%;height:300px;background: #f00;}
 
@@ -93,7 +93,7 @@
 			</li>
 			<li>
 				<a href="#">menu2</a>
-				<ul class="sub">
+				<ul class="sub" style="padding-left:50px">
 					<li><a href="#">smenu1</a></li>
 					<li><a href="#">smenu2</a></li>
 					<li><a href="#">smenu3</a></li>
@@ -103,7 +103,7 @@
 			</li>
 			<li>
 				<a href="#">menu3</a>
-				<ul class="sub">
+				<ul class="sub"  style="padding-left:100px">
 					<li><a href="#">smenu1</a></li>
 					<li><a href="#">smenu2</a></li>
 					<li><a href="#">smenu3</a></li>
@@ -113,7 +113,7 @@
 			</li>
 			<li>
 				<a href="#">menu4</a>
-				<ul class="sub">
+				<ul class="sub" style="padding-left:300px">
 					<li><a href="#">smenu1</a></li>
 					<li><a href="#">smenu2</a></li>
 					<li><a href="#">smenu3</a></li>
@@ -123,7 +123,7 @@
 			</li>
 			<li>
 				<a href="#">menu5</a>
-				<ul class="sub">
+				<ul class="sub"  style="padding-left:300px">
 					<li><a href="#">smenu1</a></li>
 					<li><a href="#">smenu2</a></li>
 					<li><a href="#">smenu3</a></li>
