--- a/20190117_jquery_slide/index.html
+++ b/20190117_jquery_slide/index.html
@@ -11,24 +11,49 @@
 		.banner{width: 100%;height: 400px;position: relative;overflow: hidden;}
 		.banner>ul{width:5000px;position: absolute;}
 		.banner>ul>li{float: left;width:1000px;}
-		.banner div.btn{width:100%;position: absolute;background: #fff;text-align:center;bottom:30px;}
+		.banner div.btn{width:100%;position: absolute;background: #fff;text-align:center;bottom:20px;}
 		#bt_prev,#bt_next{cursor:pointer;}
+		.banner div.pager{width:100%;position: absolute;bottom:50px;text-align:center;color:white;cursor:pointer;}
 	</style>
 	<script src="../js/jquery-3.3.1.min.js"></script>
 	<script>
 		$(function(){
 			var current = 0;
+			var clickInterval;
 			$("#bt_next").click(function(){
-				current++;
+				if(current<4){current++;}else{current=0;}
 				listMove();
 			});
 			$("#bt_prev").click(function(){
-				current--;
+				if(current>0){current--;}else{current=4}
 				listMove();
 			});
+			$(".bts").click(function(){
+				current = $(this).index();
+				listMove();
+			});
+
+			timer();
+
+			function timer(){
+				clickInterval = setInterval(function(){
+				$("#bt_next").trigger("click");
+				},3000);
+
+			};
+			
 			function listMove(){
-				$(".banner>ul").stop().animate({});
+				console.log(current);
+				$(".banner>ul").stop().animate({left:1000*current*-1});
+				$(".bts").css("color","white").eq(current).css("color","red");
 			}
+
+			$(".banner").on({mouseover:function(){
+				clearInterval(clickInterval);
+			},mouseout:function(){
+				timer();
+			}});
+
 		});
 	</script>
 </head>
@@ -46,6 +71,13 @@
 				<div class="btn">
 					<span id="bt_prev">이전</span>
 					<span id="bt_next">이후</span>
+				</div>
+				<div class="pager">
+					<span class="bts" style="color:red">●</span>
+					<span class="bts">●</span>
+					<span class="bts">●</span>
+					<span class="bts">●</span>
+					<span class="bts">●</span>
 				</div>
 			</div>
 		</div>
