--- a/20190118_modal/index.html
+++ b/20190118_modal/index.html
@@ -23,9 +23,8 @@
 				e.preventDefault();
 				$("#glayLayer").show();
 				$("#overLayer").show();
-
+				$("#overLayer").html("<img src='" + $(this).attr("href") + "'>");
 			});
-
 			$("#glayLayer,#overLayer").click(function(){
 				$("#glayLayer").hide();
 				$("#overLayer").hide();
