--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 		<li><a href="./20190107_jquery/tabmenu01.html" target="_blank">tebmenu</a></li>
 		<li><a href="./20190111_jquery/index01.html" target="_blank">scroll spider</a></li>
 		<li><a href="./20190114_jquery/" target="_blank">scrolling menu</a></li>
+		<li><a href="./20190116_jquery_gallery/" target="_blank">jquery_gallery</a></li>
+		<li><a href="./20190117_jquery_slide/" target="_blank">slide</a></li>
+		<li><a href="./20190118_modal/" target="_blank">modal</a></li>
 	</ul>
 </body>
 </html>
