--- a/main/index.html
+++ b/main/index.html
@@ -12,16 +12,29 @@
 	<script>
 		$(function(){
 			$(".slider").bxSlider();
+
+			$(window).scroll(function(){
+				var $scrollY = window.pageYOffset;
+				console.log($scrollY);
+
+				if ($scrollY > 300){
+					$(".header_top").addClass("fixed");
+				}else{
+					$(".header_top").removeClass("fixed");
+				}
+			});
 		});
 	</script>
 	<style>
+		*{box-sizing:border-box}
 		.bx-wrapper {box-shadow:none;border:none;margin-bottom:0;}
-		.bx-wrapper .bx-pager {bottom:400px;}
+		.bx-wrapper .bx-pager {bottom:200px;}
 
-		#header{height:1950px;background:red;color:white;position: relative;min-width:1260px;}
+		#header{height:1950px;_background:red;color:white;position: relative;min-width:1260px;margin-bottom:80px;}
 
 		/*main_menu*/
-		#header .header_top{width:1260px;position:absolute;top:20px;z-index:1;left:50%;margin-left:-630px;}
+		#header .header_top{width:1260px;position:absolute;top:20px;z-index:1;left:50%;margin-left:-630px;height:80px;padding:15px;transition:.3s;}
+		#header .header_top.fixed{position: fixed;top:30px;background-color:rgba(0,0,0,.6);}
 		#header .header_top > h1{float: left;width:200px;_background: #0f0;line-height:50px;}
 		#header .header_top > nav{float: right;}
 		#header .header_top > nav > ul{}
@@ -40,8 +53,26 @@
 
 		#header .content .row{width: 100%}
 		#header .content .row > div{float: left;width:25%;height:315px;}
-		#header .content .row > div:nth-child(3){background:orange;position: relative;}
-		#header .content .row > div:nth-child(3):after{content:"";border-width:10px;border-style: solid;border-color: transparent  transparent transparent orange;position: absolute;top:50%;right:-20px;}
+		#header .content .row > div:nth-child(1){background:skyblue;}
+		#header .content .row > div:nth-child(2){background:gray;}
+		#header .content .row > div:nth-child(3){width:50%;background:yellow;}
+		#header .content .row > div:nth-child(4){background:pink;}
+		#header .content .row > div:nth-child(5){background:darkgray;}
+		#header .content .row > div:nth-child(6){width:50%;background:black;}
+		#header .content .row > div:nth-child(7){background:black;height:630px;}
+		#header .content .row > div:nth-child(8){width:50%;background:skyblue;}
+		#header .content .row > div:nth-child(9){background:pink;}
+		#header .content .row > div:nth-child(10){background:black;}
+		#header .content .row > div:nth-child(11){width:50%;background:blue;}
+		/*#header .content .row > div:nth-child(3){background:orange;position: relative;}
+		#header .content .row > div:nth-child(3):after{content:"";border-width:10px;border-style: solid;border-color: transparent  transparent transparent orange;position: absolute;top:50%;right:-20px;}*/
+
+
+		/*section*/
+
+		#section{width:100%;height:760px;background:url(./img/contentsbg01.jpg) no-repeat center fixed;background-size:cover;padding:30px 0;}
+		#section > .row{width:1260px;height:700px;background:rgba(30,30,30,.7);margin:0 auto;}
+
 
 		
 	</style>
@@ -85,16 +116,27 @@
 		</div>
 		<div class="content">
 			<div class="row clearfix">
-				<div>1</div>
-				<div>2</div>
-				<div>3</div>
-				<div>4</div>
+				<div>뉴스레터</div>
+				<div>동영상</div>
+				<div>뉴스레터</div>
+				<div>회사소개</div>
+
+				<div>투자정보</div>
+				<div>세상을 밝히는빛</div>
+				<div>7</div>
+				<div>8</div>
+				<div>9</div>
+				<div>10</div>
+				<div>11</div>
 			</div>
 			
 		</div>
 
 	</header>
-	<div style="width:100%;height:400px;background:#000"></div>
+	<div id="section">
+		<div class="row"></div>
+	</div>
+	<div style="height:1000px"></div>
 	
 </body>
 </html>
