--- a/test/view.html
+++ b/test/view.html
@@ -37,12 +37,19 @@
 			
 		</ul>
 	</div> -->
-	<span style="width:200px;height:200px;margin:10px;_padding:20px;background:red;vertical-align: middle:">text</span>
 	<style>
-		.box01{display:table-cell;width: 200px;height: 200px;background:skyblue;vertical-align:middle;text-align:center;}
+		span{margin:20px;border: 1px solid #000;padding:20px;background:red;}
+	</style>
+	<span>text</span>
+	<span>text</span>
+	<style>
+		.box01{_display:table-cell;width: 200px;height: 200px;background:skyblue;vertical-align:middle;text-align:center;}
 	</style>
 	<div class="box01">
-		test
+		<div style="display:table-cell;">2222</div>
 	</div>
+
+
+	
 </body>
 </html>
