--- a/bootstrap/index01.html
+++ b/bootstrap/index01.html
@@ -14,6 +14,88 @@
 	
 </head>
 <body>
+<div class="container-flud p-0 m-0">
+	<div id="demo" class="carousel slide" data-ride="carousel">
+		<ul class="carousel-indicators">
+			<li data-target="#demo" data-slide-to="0" class="active"></li>
+			<li data-target="#demo" data-slide-to="1"></li>
+			<li data-target="#demo" data-slide-to="2"></li>
+		</ul>
+		<style>
+			.carousel-item{position: relative;}
+			.carousel-item img{width:100%;}
+			.carousel-item > h2{width:500px;position: absolute;color:white;left:50%;top:40%;margin-left:-250px;text-align:center;animation-duration: 2s;}
+		</style>
+		<div class="carousel-inner">
+			<div class="carousel-item active">
+				<img src="../images/pc01.jpg" alt="img01" class="animate fadeInUp animated">
+				<h2 class="bounce animated">Lorem ipsum dolor sit amet.</h2>
+			</div>
+			<div class="carousel-item">
+				<img src="../images/pc02.jpg" alt="img01" class="animate jello animated">
+				<h2 class="fadeInUp animated">Lorem ipsum dolor sit amet.</h2>
+			</div>
+			<div class="carousel-item">
+				<img src="../images/pc03.jpg" alt="img01" class="animate shake animated">
+				<h2 class="bounce animated">Lorem ipsum dolor sit amet.</h2>
+			</div>
+		</div>
+		<a href="#demo" class="carousel-control-prev" data-slide="prev">
+			<span class="carousel-control-prev-icon"></span>
+		</a>
+		<a href="#demo" class="carousel-control-next" data-slide="next">
+			<span class="carousel-control-next-icon"></span>
+		</a>
+	</div>
+</div>
+
+	
+	<nav class="navbar bg-dark navbar-expand-sm navbar-dark sticky-top">
+		<a href="#" class="navbar-brand">LOGO</a>
+		<button class="navbar-toggler" data-toggle="collapse" data-target="#menuNavbar">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="menuNavbar">
+			<ul class="navbar-nav text-center ml-auto">
+				<li class="nav-item">
+					<a href="#" class="nav-link">link1</a>
+				</li>
+				<li class="nav-item">
+					<a href="#" class="nav-link">link2</a>
+	
+	
+	
+	
+				</li>
+	
+				<li class="nav-item dropdown">
+					<a href="#" class="nav-link dropdown-toggle" id="navbardrop" data-toggle="dropdown">link3</a>
+	
+					<div class="dropdown-menu">
+						<a href="#" class="dropdown-item">sublink1</a>
+						<a href="#" class="dropdown-item">sublink2</a>
+						<a href="#" class="dropdown-item">sublink3</a>
+					</div>
+	
+				</li>
+				<li class="nav-item dropdown">
+					<a href="#" class="nav-link dropdown-toggle" id="navbardrop" data-toggle="dropdown">link4</a>
+	
+					<div class="dropdown-menu dropdown-menu-right">
+						<a href="#" class="dropdown-item">sublink1</a>
+						<a href="#" class="dropdown-item">sublink2</a>
+						<a href="#" class="dropdown-item">sublink3</a>
+					</div>
+	
+				</li>
+			</ul>
+		</div>
+	
+	</nav>
+
+
+
+
 	<div class="container">
 		<div class="row">
 			<div class="col-md-4 bg-primary text-center">1</div>
@@ -120,45 +202,70 @@
 		</div>
 	</div>
 
-<div class="container-flud p-0 m-0">
-	<div id="demo" class="carousel slide" data-ride="carousel">
-		<ul class="carousel-indicators">
-			<li data-target="#demo" data-slide-to="0" class="active"></li>
-			<li data-target="#demo" data-slide-to="1"></li>
-			<li data-target="#demo" data-slide-to="2"></li>
-		</ul>
-		<style>
-			.carousel-item{position: relative;}
-			.carousel-item img{width:100%;}
-			.carousel-item > h2{width:500px;position: absolute;color:white;left:50%;top:40%;margin-left:-250px;text-align:center;animation-duration: 2s;}
-		</style>
-		<div class="carousel-inner">
-			<div class="carousel-item active">
-				<img src="../images/pc01.jpg" alt="img01" class="animate fadeInUp animated">
-				<h2 class="bounce animated">Lorem ipsum dolor sit amet.</h2>
-			</div>
-			<div class="carousel-item">
-				<img src="../images/pc02.jpg" alt="img01" class="animate jello animated">
-				<h2 class="fadeInUp animated">Lorem ipsum dolor sit amet.</h2>
-			</div>
-			<div class="carousel-item">
-				<img src="../images/pc03.jpg" alt="img01" class="animate shake animated">
-				<h2 class="bounce animated">Lorem ipsum dolor sit amet.</h2>
-			</div>
-		</div>
-		<a href="#demo" class="carousel-control-prev" data-slide="prev">
-			<span class="carousel-control-prev-icon"></span>
-		</a>
-		<a href="#demo" class="carousel-control-next" data-slide="next">
-			<span class="carousel-control-next-icon"></span>
-		</a>
-	</div>
-</div>
+
 
 
 <div class="container">
 	<button data-toggle="collapse" data-target="#demo1" class="btn btn-primary">아코디언메뉴</button>
 	<div id="demo1" class="collapse">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis eveniet, at voluptatum placeat est culpa odio quia. Unde, at, magnam.</div>
+</div>
+
+<div class="container">
+	<div id="accordion">
+		<div class="card">
+			<div class="card-header">
+				<a href="#collapseOne" class="card-link" data-toggle="collapse">Lorem ipsum.</a>
+			</div>
+	
+			<div id="collapseOne" class="collapse show" data-parent="#accordion">
+				<div class="card-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint incidunt vel fuga rerum asperiores quos qui exercitationem et. Hic, inventore.</div>
+			</div>
+		</div>
+
+		<div class="card">
+			<div class="card-header">
+				<a href="#collapseTwo" class="card-link" data-toggle="collapse">Lorem ipsum.</a>
+			</div>
+	
+			<div id="collapseTwo" class="collapse" data-parent="#accordion">
+				<div class="card-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint incidunt vel fuga rerum asperiores quos qui exercitationem et. Hic, inventore.</div>
+			</div>
+		</div>
+		<div class="card">
+			<div class="card-header">
+				<a href="#collapseThree" class="card-link" data-toggle="collapse">Lorem ipsum.</a>
+			</div>
+	
+			<div id="collapseThree" class="collapse" data-parent="#accordion">
+				<div class="card-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint incidunt vel fuga rerum asperiores quos qui exercitationem et. Hic, inventore.</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="container">
+	<div id="accordion1">
+		<ul class="list-group">
+			<li class="list-group-item">
+				<a href="#item1" data-toggle="collapse">Lorem ipsum.</a>
+				<div id="item1" class="collapse show" data-parent="#accordion1">
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non consectetur sapiente labore corporis ipsum iste velit commodi nemo reprehenderit veritatis!
+				</div>
+			</li>
+			<li class="list-group-item">
+				<a href="#item2" data-toggle="collapse">Lorem ipsum.</a>
+				<div id="item2" class="collapse" data-parent="#accordion1">
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non consectetur sapiente labore corporis ipsum iste velit commodi nemo reprehenderit veritatis!
+				</div>
+			</li>
+			<li class="list-group-item">
+				<a href="#item3" data-toggle="collapse">Lorem ipsum.</a>
+				<div id="item3" class="collapse" data-parent="#accordion1">
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non consectetur sapiente labore corporis ipsum iste velit commodi nemo reprehenderit veritatis!
+				</div>
+			</li>
+		</ul>
+	</div>
 </div>
 
 
