--- a/test/hover.html
+++ b/test/hover.html
@@ -79,6 +79,30 @@
 			<div><span>Menu by Simon Jensen</span></div>
 			</a>
 		</li>
+		<li>
+			<a href="#">
+			<img src="../images/testimg.jpg" />
+			<div><span>Menu by Simon Jensen</span></div>
+			</a>
+		</li>
+		<li>
+			<a href="#">
+			<img src="../images/testimg.jpg" />
+			<div><span>Menu by Simon Jensen</span></div>
+			</a>
+		</li>
+		<li>
+			<a href="#">
+			<img src="../images/testimg.jpg" />
+			<div><span>Menu by Simon Jensen</span></div>
+			</a>
+		</li>
+		<li>
+			<a href="#">
+			<img src="../images/testimg.jpg" />
+			<div><span>Menu by Simon Jensen</span></div>
+			</a>
+		</li>
 		
 	</ul>
 </body>
