--- a/fullpage/index.html
+++ b/fullpage/index.html
@@ -45,7 +45,7 @@
 				'afterLoad':function(anchorsLink,index){
 					console.log(index);
 					if(index == 2){
-						$(".onview").addClass("mactive");
+						$(".onview").addClass("mactive amck dkdkdk");
 					}else{
 						$(".onview").removeClass("mactive");
 					}
@@ -61,6 +61,8 @@
 			<li data-menuanchor="2st"><a href="#2st">menu2</a></li>
 			<li data-menuanchor="3st"><a href="#3st">menu3</a></li>
 			<li data-menuanchor="4st"><a href="#4st">menu4</a></li>
+			<li><a href="#">menu05</a></li>
+			<li><a href="#">menu06</a></li>
 		</ul>
 	</nav>
 	<div id="fullpage">
