--- a/bootstrap/index03.html
+++ b/bootstrap/index03.html
@@ -11,10 +11,10 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
 	<style>
 	/*body{overflow:hidden;}*/
-		.header{
+		/*.header{
 			background:url(../images/bimg/bg-top.jpg) no-repeat center top;
 			background-size:cover;color:white;padding-top:30px;padding-bottom:50px;
-		}
+		}*/
 		.header h1{padding-top:90px;}
 		.bg-grey{background:#f5f5f5;}
 		img{max-width:100%;}
@@ -25,7 +25,7 @@
 <body>
 <div class="header">
 	<div class="container">
-		<nav class="navbar navbar-expand-sm bg-primary navbar-dark ">
+		<nav class="navbar navbar-expand-sm bg-primary navbar-dark fixed-top">
 		  <!-- Brand -->
 		  <a class="navbar-brand" href="#">LOGO</a>
 		
@@ -58,14 +58,37 @@
 		  </div>
 		</nav>
 	</div>
-	<div class="container text-center">
-		<h1  class="zoomIn animated"><strong>Lorem ipsum dolor sit amet</strong>,<br>consectetur adipisicing elit. Quos, sit?</h1>
-		<h4  class="fadeInUp animated delay-1s">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores, dignissimos.</h4>
-		<div class="btn btn-primary mt-3">Upload Project</div>
-		<p class="d-none d-md-block mt-3">
-			<img src="../images/bimg/drop-icon.png" alt="">
-		</p>
-		<p class="d-none d-md-block">Lorem ipsum dolor sit amet,<br>consectetur adipisicing elit. Velit, debitis.</p>
+	<div id="demo" class="carousel slide" data-ride="carousel">
+		<ul class="carousel-indicators">
+			<li data-target="#demo" data-slide-to="0" class="active"></li>
+			<li data-target="#demo" data-slide-to="1"></li>
+			<li data-target="#demo" data-slide-to="2"></li>
+		</ul>
+		<style>
+			.carousel-item{position: relative;}
+			.carousel-item img{width:100%;}
+			.carousel-item > h2{width:500px;position: absolute;color:white;left:50%;top:40%;margin-left:-250px;text-align:center;animation-duration: 2s;}
+		</style>
+		<div class="carousel-inner">
+			<div class="carousel-item active">
+				<img src="../images/pc01.jpg" alt="img01" class="animate fadeInUp animated">
+				<h2 class="bounce animated">Lorem ipsum dolor sit amet.</h2>
+			</div>
+			<div class="carousel-item">
+				<img src="../images/pc02.jpg" alt="img01" class="animate jello animated">
+				<h2 class="fadeInUp animated">Lorem ipsum dolor sit amet.</h2>
+			</div>
+			<div class="carousel-item">
+				<img src="../images/pc03.jpg" alt="img01" class="animate shake animated">
+				<h2 class="bounce animated">Lorem ipsum dolor sit amet.</h2>
+			</div>
+		</div>
+		<a href="#demo" class="carousel-control-prev" data-slide="prev">
+			<span class="carousel-control-prev-icon"></span>
+		</a>
+		<a href="#demo" class="carousel-control-next" data-slide="next">
+			<span class="carousel-control-next-icon"></span>
+		</a>
 	</div>
 </div>
 <div class="pt-5 pb-5 bg-grey" style="overflow:hidden;">
