--- a/parallax/mousewheel_s.html
+++ b/parallax/mousewheel_s.html
@@ -12,6 +12,10 @@
 		body,html{height:100%;}
 		div{width: 100%;height: 100%;}
 		div:nth-child(2n){background:skyblue;}
+
+		div.man.dd
+		div > main
+		div main
 	</style>
 	<script>
 		$(function(){
