--- a/fullpage/index.html
+++ b/fullpage/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="../css/reset.css">
 	
 	<script src="../js/jquery-3.3.1.min.js"></script>
-	<script src="./js/jquery.fullpage.js"></script>
+	<script src="./js/jquery.fullPage.js"></script>
 	<style>
 		#fullpage{width: 100%;height:100%;}
 		#page1{background-image:url(../images/bg1.jpg);}
