--- a/fullpage/index.html
+++ b/fullpage/index.html
@@ -46,7 +46,7 @@
 					console.log(index);
 					var myVideo = document.getElementById("video1"); 
 					if(index == 1){
-						if (myVideo.paused) {  myVideo.play(); }
+					myVideo.play();
 
 						}
 					if(index == 2){
