--- a/20190111_jquery/index01.html
+++ b/20190111_jquery/index01.html
@@ -11,9 +11,11 @@
 		div.menu-container{width:100%;}
 		div.menu-container ul{width: 100%;}
 		div.menu-container ul:after{content:"";display: block;clear: both;}
-		div.menu-container ul>li{float: left;width: 20%;height: 100px;text-align: center;background:skyblue;border-right:1px solid #ddd;line-height: 100px;cursor:pointer;box-sizing:border-box;transition:.3s;}
+		div.menu-container ul>li{float: left;width: 20%;height: 100px;text-align: center;background:skyblue;border-right:1px solid #ddd;line-height: 100px;cursor:pointer;box-sizing:border-box;transition:.7s;font-size:2rem;}
+		div.menu-container ul>li>img{width:100px;}
 		div.menu-container ul.fixed{position: fixed;top:0;left:0;width:100%;}
-		div.menu-container ul.fixed li{line-height: 30px;height:30px;}
+		div.menu-container ul.fixed li{line-height: 30px;height:30px;font-size:1rem;}
+		div.menu-container ul.fixed li img{width:50px;}
 		#btn{position:fixed;bottom:20px;right:20px;}
 
 		.content{position: relative;}
@@ -140,7 +142,7 @@
 		</div>
 		<div class="menu-container">
 			<ul>
-				<li>menu1</li>
+				<li><img src="../images/car01.gif" ></li>
 				<li>menu2</li>
 				<li>menu3</li>
 				<li>menu4</li>
