--- a/parallax/view01.html
+++ b/parallax/view01.html
@@ -13,7 +13,7 @@
 
 
 #home { 
-  background: url(../images/bg1.jpg) 50% 0 repeat fixed; min-height: 1000px; 
+  background: url(../images/bg1.jpg) 50% 0 no-repeat fixed; min-height: 1000px; 
   height: 100vh; 
   margin: 0 auto; 
   width: 100%; 
@@ -39,14 +39,13 @@
 }
  
 #about { 
-  background: url(../images/windmill.jpg) 50% 20px no-repeat fixed; min-height: 1000px; 
+  background: url(../images/windmill.jpg) 50% 0 repeat fixed; min-height: 1000px; 
   background-size:cover;
-  height: 100vh; 
+  height: 1200px; 
   margin: 0 auto; 
   width: 100%; 
   max-width: 1920px; 
   position: relative; 
-  -webkit-box-shadow: 0 0 50px rgba(0,0,0,0.8);
   box-shadow: 0 0 50px rgba(0,0,0,0.8);
 }
  
