--- a/parallax/new_parallax01.html
+++ b/parallax/new_parallax01.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>parallax</title>
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<link rel="stylesheet" href="../css/reset.css">
 	<link rel="stylesheet" href="../css/animate.css">
 	<script src="../js/jquery-3.3.1.min.js"></script>
