--- a/test/button.html
+++ b/test/button.html
@@ -13,7 +13,7 @@
 		div.bar:nth-child(3){bottom:10px;left:5px;}
 
 
-		.box:hover div.bar:nth-child(1){right:10px;width:10px;}
+		.box:hover div.bar:nth-child(1){left:30px;width:10px;}
 		.box:hover div.bar:nth-child(2){left:20px;width:20px;}
 		
 
