--- a/20190111_jquery/index01.html
+++ b/20190111_jquery/index01.html
@@ -26,6 +26,42 @@
 	<script src="../js/jquery-3.3.1.min.js"></script>
 	<script>
 		$(document).ready(function(){
+			
+		var $menu = $(".menu-container");
+			var $menuPos = $menu.offset().top;
+
+			var $car1 = $("#img01");
+			var $carPos = $car1.offset().top;
+
+			var $car2 = $("#img02");
+			var $carPos2 = $car2.offset().top;
+
+
+			$car1.css({opacity:0});
+			$car2.css({opacity:0});
+
+			console.log($carPos);
+
+			$("#btn").css("opacity",0);
+			
+
+			setTimeout(function(){mScroll()},1);
+
+			$(window).on("scroll",function(){
+				mScroll();
+			});
+
+			
+
+			$("#btn").click(function(){
+				$("html,body").animate({scrollTop:0},1000);
+			});
+
+
+
+		});
+
+		function mScroll(){
 			var $menu = $(".menu-container");
 			var $menuPos = $menu.offset().top;
 
@@ -35,16 +71,9 @@
 			var $car2 = $("#img02");
 			var $carPos2 = $car2.offset().top;
 
-			$car1.css({opacity:0});
-			$car2.css({opacity:0});
-
-			console.log($carPos);
-
-			$("#btn").css("opacity",0);
 			
-			$(window).on("scroll",function(){
-				var scrollY = window.pageYOffset;
-				// var scrollY = $("html,body").scrollTop();
+				//var scrollY = window.pageYOffset;
+				 var scrollY = $("html,body").scrollTop();
 				console.log(scrollY);
 				if(scrollY > $menuPos){
 					$(".menu-container ul").addClass("fixed");
@@ -73,15 +102,9 @@
 					$car2.css({right:0,opacity:0});
 				}
 
-			});
-
-			$("#btn").click(function(){
-				$("html,body").animate({scrollTop:0},1000);
-			});
 
 
-
-		});
+		}
 
 
 	</script>
