--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
 	<ol>
 		<li><a href="./20190104_bxslider/index.html" target="_blank">bxslider1</a></li>
+		<li><a href="./20190104_bxslider/test.html" target="_blank">bxslider_banner</a></li>
 		<li><a href="./20190107_jquery/tabmenu01.html" target="_blank">tebmenu</a></li>
 		<li><a href="./20190111_jquery/index01.html" target="_blank">scroll spider</a></li>
 		<li><a href="./20190114_jquery/" target="_blank">scrolling menu</a></li>
