--- a/20190104_bxslider/test.html
+++ b/20190104_bxslider/test.html
@@ -2,6 +2,7 @@
 <html lang="ko">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<title>title</title>
 	<link rel="stylesheet" href="./css/jquery.bxslider.css">
 	<link rel="stylesheet" href="./css/reset.css">
