--- a/20190104_bxslider/test.html
+++ b/20190104_bxslider/test.html
@@ -45,6 +45,9 @@
 			#content .slider_wrap{width:500px;}
 		}
 		@media (max-width: 768px) {
+			#content .slider_wrap{width:390px;}
+		}
+		@media (max-width: 576px) {
 			#content .slider_wrap{width:250px;}
 		}
 	</style>
