--- a/20190111_jquery/index01.html
+++ b/20190111_jquery/index01.html
@@ -47,9 +47,9 @@
 
 			setTimeout(function(){mScroll()},1);
 
-			$(window).on("scroll",function(){
-				mScroll();
-			});
+			// $(window).on("scroll",function(){
+			// 	mScroll();
+			// });
 
 			
 
