--- a/bootstrap/index03.html
+++ b/bootstrap/index03.html
@@ -110,6 +110,35 @@
 		</div>
 	</div>
 </div>
+<div class="pt-5 pb-5">
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-6 bg-primary">
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, a et. In veniam, architecto nam debitis sunt corrupti nulla tenetur eveniet mollitia sed consequuntur maiores expedita modi magni. Numquam ipsam consectetur excepturi eum dolore corrupti saepe assumenda eius expedita veniam aperiam quibusdam earum vitae, quasi, facilis pariatur. Quia, iure deserunt!
+			</div>
+			<div class="col-sm-6 bg-danger">
+				
+						<div class="row">
+							<div class="col-sm-6 bg-dark">
+								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, a et. In veniam, architecto nam debitis sunt corrupti nulla tenetur eveniet mollitia sed consequuntur maiores expedita modi magni. Numquam ipsam consectetur excepturi eum dolore corrupti saepe assumenda eius expedita veniam aperiam quibusdam earum vitae, quasi, facilis pariatur. Quia, iure deserunt!
+							</div>
+							<div class="col-sm-6 bg-light">
+								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, a et. In veniam, architecto nam debitis sunt corrupti nulla tenetur eveniet mollitia sed consequuntur maiores expedita modi magni. Numquam ipsam consectetur excepturi eum dolore corrupti saepe assumenda eius expedita veniam aperiam quibusdam earum vitae, quasi, facilis pariatur. Quia, iure deserunt!
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-sm-12 bg-info">
+								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, a et. In veniam, architecto nam debitis sunt corrupti nulla tenetur eveniet mollitia sed consequuntur maiores expedita modi magni. Numquam ipsam consectetur excepturi eum dolore corrupti saepe assumenda eius expedita veniam aperiam quibusdam earum vitae, quasi, facilis pariatur. Quia, iure deserunt!
+							</div>
+							
+						</div>
+					</div>
+
+			
+		</div>
+	</div>
+</div>
+
 <style>
 	li{list-style:none;}
 	ul.notice{}
@@ -120,7 +149,7 @@
 	ul.notice>li>div{float: right;line-height:2.5em;font-size:1.5em;}
 
 </style>
-<div class="pt-5 pb-5" style="overflow:hidden">
+<div class="pt-5 pb-5  bg-grey" style="overflow:hidden">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-7">
