--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<li><a href="./20190116_jquery_gallery/" target="_blank">jquery_gallery</a></li>
 		<li><a href="./20190117_jquery_slide/" target="_blank">slide</a></li>
 		<li><a href="./20190118_modal/" target="_blank">modal</a></li>
+		<li><a href="./20190213_video/" target="_blank">video.js</a></li>
 	</ol>
 </body>
 </html>
